[project]
name = "rerun_ex"
version = "0.1.0"
description = "using pixi to manage a rerun based project"
authors = [{name = "Austin Gregg-Smith", email = "blooop@gmail.com"}]
requires-python = ">=3.10"

dependencies = ["rerun-sdk>=0.18.2"]

[project.optional-dependencies]
test = [
  "pylint>=3.2.5,<=3.2.7",
  "pytest-cov>=4.1,<=5.0.0",
  "pytest>=7.4,<=8.3.2",
  "hypothesis>=6.104.2,<=6.111.2",
  "ruff>=0.5.0,<=0.6.3",
  "coverage>=7.5.4,<=7.6.1",
]

##uncommenting these lines enables pixi to run, but this does not feel correct as its duplicating the rerun-sdk dependency
# [tool.pixi.dependencies]
# rerun-sdk = ">=0.18.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rerun_ex = { path = ".", editable = true }

[tool.pixi.tasks]
demo = "python3 rerun_ex.py"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = {features = ["test"], solve-group = "default" }
py310 = ["py310","test"]
py311 = ["py311","test"]
py312 = ["py312","test"]


# $ pixi run demo
#   × failed to solve the pypi requirements of 'default' 'linux-64'
#   ├─▶ failed to resolve pypi dependencies
#   ╰─▶ Because rerun-sdk==0.18.2 has no wheels with a matching platform tag and only rerun-
#       sdk<=0.18.2 is available, we can conclude that rerun-sdk>=0.18.2 cannot be used.
#       And because you require rerun-sdk>=0.18.2, we can conclude that your requirements are
#       unsatisfiable.