[project]
name = "rerun_ex"
version = "0.1.0"
description = "using pixi to manage a rerun based project"
authors = [{name = "Austin Gregg-Smith", email = "blooop@gmail.com"}]
requires-python = ">=3.10"

# dependencies = ["rerun-sdk"]

##uncommenting these lines enables pixi to run, but this does not feel correct as its duplicating the rerun-sdk dependency
[tool.pixi.dependencies]
python = "==3.10"
uv ="*"
pip  ="*"
rerun-sdk = ">=0.18.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
demo = "python3 rerun_ex.py"